<resources>
    <string name="app_name">Apekantun</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="Correo">Correo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Iniciasesion">Iniciar Sesion</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido1">Primer Apellido</string>
    <string name="Apellido2">Segundo Apellido</string>
    <string name="ConfirmarContraseña">Conformar Contraseña</string>
    <string name="Run">Run</string>
    <string name="Dv">DV</string>
    <string name="Registrar">Registrar</string>
    <string name="toolbar_tittle_registrar">Registrar</string>
    <string name="Fichageneral">Ficha general de viaje</string>
    <string name="Fichaalimentacion">Ficha de alimentación</string>
    <string name="Nominaparticipantes">Nomina de participantes</string>
    <string name="Fichaalojamiento">Ficha de alojamiento</string>
    <string name="FechaSolicitud">Fecha Solicitud</string>
    <string name="FechaSolicitudtext">XX/XX/XXXX</string>
    <string name="Registrarviaje">Registrar Viaje</string>
    <string name="FechaRealizacion">Fecha Realizar</string>
    <string name="toolbar_tittle_menu_coordinador">Menu Coordinador</string>
    <string name="toolbar_tittle_crear_viaje">Crear Viaje</string>
    <string name="Nombreparticipante">Nombre Participante</string>
    <string name="Rutpart">Rut</string>
    <string name="Telefonoa">Telefono</string>
    <string name="Telefonob">Telefono de emergencias</string>
    <string name="apellidopart">Apellido</string>
    <string name="Correopart">Correo</string>
    <string name="toolbar_tittle_nomina">Nomina Participantes</string>
    <string name="toolbar_tittle_fichageneral">Ficha General</string>
    <string name="Cantidadparticipante">CantidadParticipantes</string>
    <string name="Cantidadcoordinadores">Cantidad Coordinadores</string>
    <string name="CantidadChofer">Cantidad Choferes</string>
    <string name="guardarficha">Guardar</string>
    <string name="Gasto">Nominas de gasto</string>
    <string name="runcho">Run Conductor</string>
    <string name="nombrecho">Nombre Conductor</string>
    <string name="apellidocho">Apellido Conductor</string>
    <string name="correocho">Correo Conductor</string>
    <string name="datoscho">Datos Conductor</string>
    <string name="textocantidadcoor">Seleccione los coordinadores uno por uno en estas listas.</string>
    <string name="coordinador1">Primer Coordinador</string>
    <string name="coordinador2">Segundo Coordinador</string>
    <string name="coordinador3">Tercer Coordinador</string>
    <string name="datoscoor">Datos Coordinador</string>
    <string name="textocond">Complete los datos de el conductor</string>
    <string name="attentioncond">Si la empresa de el conductor no esta registrada por favor realizelo antes de completar este formulario</string>
    <string name="textocantidadpart">Introduzca la cantidad de participantes en el viaje</string>
    <string name="textesubcantidadpart">Recuerda la cantidad de participantes sin contar a los integrantes de ayekantun</string>
    <string name="toolbar_tittle_dialogopart">Crear Participante</string>
    <string name="toolbar_gastos">Gastos</string>
    <string name="registrargasto">Registrar Gasto</string>
    <string name="registrarpago">Registrar Pago</string>
    <string name="registrarempresa">Registrar Empresa</string>
    <string name="vergasto">Ver Gastos</string>
    <string name="textoprincipalgastos">Para registrar un pago tienes que tener registrado un gasto y para registrar un gasto tienes que tener registrada la empresa con la cual realizaste el gasto</string>
    <string name="toolbar_tittle_reg_empresa">Registrar Empresa</string>
    <string name="NombreEmpresa">Nombre Empresa</string>
    <string name="telefonoempresa">Telefono Empresa</string>
    <string name="ContactoEmpresa">Nombre Contacto</string>
    <string name="Direccion">Direccion de la empresa</string>
    <string name="numeroempresa">numero empresa</string>
    <string name="bloqueempresa">numero de bloque</string>
    <string name="puertaempresa">Puerta</string>
    <string name="textoregistroempresadireccion">Para poder registar una nueva empresa primero debes registrar su direccion</string>
    <string name="fichageneralbus">Datos Bus</string>
    <string name="textobus">Complete los datos del bus</string>
    <string name="atencionbus">Si la empresa del bus no esta registrada por favor realizelo antes de completar este formulario</string>
    <string name="patentebus">Patente Bus</string>
    <string name="observacionesbus">Observacion Bus</string>
    <string name="toolbar_tittle_reg_gasto">Registrar Gasto</string>
    <string name="total">total</string>
    <string name="toolbar_tittle_reg_pago">Registar Pago</string>
    <string name="FechaPago">Fecha Pago</string>
    <string name="montopago">Cantidad Pagada</string>
</resources>
