<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DialogoParticipanteActivity">
    <include layout="@layout/actionbar_toolbar"/>
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      android:fillViewport="true"
      >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin"

        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:theme="@style/EditTextBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Nombreparticipante"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Nombreparticipante"

                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:theme="@style/EditTextBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/apellidoparticipante"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/apellidopart"

                />
        </com.google.android.material.textfield.TextInputLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nombre"
            android:hint="@string/Nombreparticipante"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apellido"
            android:hint="@string/apellidopart"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rut"
            android:hint="@string/Rutpart"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/telefonoa"
            android:hint="@string/Telefonoa"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/telefonob"
            android:hint="@string/Telefonob"
            android:theme="@style/EditTextBlack"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/correo"
            android:hint="@string/Correopart"
            android:theme="@style/EditTextBlack"/>



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Agregar"
                android:id="@+id/D_agregar"
                android:theme="@style/RaiseButtonDark"
                />



    </LinearLayout>
  </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>