<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NominaParticipantesActivity">

    <include layout="@layout/actionbar_toolbar"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"


        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Nombreparticipante"
            android:text="@string/Nombreparticipante"
            android:padding="15dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apellidoparticipante"
            android:text="@string/apellidopart"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rut"
            android:text="@string/Rutpart"
            android:padding="10dp"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="vertical"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/telefonoa"
            android:text="@string/Telefonoa"
            android:padding="15dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/telefonob"
            android:text="@string/Telefonob"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/correo"
            android:text="@string/Correopart"
            android:padding="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        >


        <Button
            android:id="@+id/editar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:padding="20dp"
            android:background="@color/colorPrimary"
            android:drawableTop="@drawable/ic_pencil_color_black_24dp"

            />

        <Button
            android:id="@+id/eliminar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:padding="20dp"
            android:background="@color/colorPrimaryDark"
            android:drawableTop="@drawable/ic_close_black_24dp"
            />

    </LinearLayout>





</LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/agregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_my_icon"
        android:layout_margin="16dp"
        tools:ignore="MissingConstraints"
        android:clickable="true"
        android:focusable="false"

        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>